generated-out/vanilla/dear-imgui-raw-vanilla/cbits/dcimgui_nodefaultargfunctions.h


typedef struct ImVec2_t ImVec2;
typedef unsigned int ImGuiID;      
typedef struct ImFontAtlas_t ImFontAtlas;                            
typedef struct ImGuiContext_t ImGuiContext;                                    
typedef struct ImGuiViewport_t ImGuiViewport;                                  
typedef int ImGuiCol;             
typedef int ImGuiDataType;        
typedef int ImGuiColorEditFlags;    
typedef int ImGuiSliderFlags;       
IM_MSVC_RUNTIME_CHECKS_RESTORE
CIMGUI_API ImGuiContext* ImGui_CreateContext(ImFontAtlas* shared_font_atlas );
CIMGUI_API void          ImGui_DestroyContext(ImGuiContext* ctx );  
CIMGUI_API bool ImGui_ComboChar(const char* label, int* current_item, const char*const items[], int items_count, int popup_max_height_in_items );
CIMGUI_API bool ImGui_Combo(const char* label, int* current_item, const char* items_separated_by_zeros, int popup_max_height_in_items );           
CIMGUI_API bool ImGui_ComboCallback(const char* label, int* current_item, const char* (*getter)(void* user_data, int idx), void* user_data, int items_count, int popup_max_height_in_items );
CIMGUI_API bool ImGui_DragFloat(const char* label, float* v, float v_speed , float v_min , float v_max , const char* format , ImGuiSliderFlags flags );                                          
CIMGUI_API bool ImGui_DragFloat2(const char* label, float v[2], float v_speed , float v_min , float v_max , const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_DragFloat3(const char* label, float v[3], float v_speed , float v_min , float v_max , const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_DragFloat4(const char* label, float v[4], float v_speed , float v_min , float v_max , const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_DragFloatRange2(const char* label, float* v_current_min, float* v_current_max, float v_speed , float v_min , float v_max , const char* format , const char* format_max , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_DragInt(const char* label, int* v, float v_speed , int v_min , int v_max , const char* format , ImGuiSliderFlags flags );                                                          
CIMGUI_API bool ImGui_DragInt2(const char* label, int v[2], float v_speed , int v_min , int v_max , const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_DragInt3(const char* label, int v[3], float v_speed , int v_min , int v_max , const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_DragInt4(const char* label, int v[4], float v_speed , int v_min , int v_max , const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_DragIntRange2(const char* label, int* v_current_min, int* v_current_max, float v_speed , int v_min , int v_max , const char* format , const char* format_max , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_DragScalar(const char* label, ImGuiDataType data_type, void* p_data, float v_speed , const void* p_min , const void* p_max , const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_DragScalarN(const char* label, ImGuiDataType data_type, void* p_data, int components, float v_speed , const void* p_min , const void* p_max , const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_ColorEdit3(const char* label, float col[3], ImGuiColorEditFlags flags );
CIMGUI_API bool ImGui_ColorEdit4(const char* label, float col[4], ImGuiColorEditFlags flags );
CIMGUI_API bool ImGui_ColorPicker3(const char* label, float col[3], ImGuiColorEditFlags flags );
CIMGUI_API bool ImGui_ColorPicker4(const char* label, float col[4], ImGuiColorEditFlags flags , const float* ref_col );
CIMGUI_API bool ImGui_ListBoxCallback(const char* label, int* current_item, const char* (*getter)(void* user_data, int idx), void* user_data, int items_count, int height_in_items );
CIMGUI_API void ImGui_PlotLinesCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
CIMGUI_API void ImGui_PlotHistogramCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
CIMGUI_API void  ImGui_Columns(int count , const char* id , bool borders );
CIMGUI_API void  ImGui_DebugTextEncoding(const char* text);
CIMGUI_API void  ImGui_DebugFlashStyleColor(ImGuiCol idx);
CIMGUI_API void  ImGui_DebugStartItemPicker(void);
CIMGUI_API bool  ImGui_DebugCheckVersionAndDataLayout(const char* version_str, size_t sz_io, size_t sz_style, size_t sz_vec2, size_t sz_vec4, size_t sz_drawvert, size_t sz_drawidx); 
struct ImFontAtlas_t
{
    ImFontAtlasFlags          Flags;                                          
    ImTextureFormat           TexDesiredFormat;                               
    int                       TexGlyphPadding;                                
    int                       TexMinWidth;                                    
    int                       TexMinHeight;                                   
    int                       TexMaxWidth;                                    
    int                       TexMaxHeight;                                   
    void*                     UserData;                                       
#ifdef IMGUI_DISABLE_OBSOLETE_FUNCTIONS
    ImTextureRef              TexRef;                                         
#else
    union                     
    {
        ImTextureRef TexRef;
        ImTextureRef TexID;
    };
#endif 
    ImTextureData*            TexData;                                        
    ImVector_ImTextureDataPtr TexList;                                        
    bool                      Locked;                                         
    bool                      RendererHasTextures;                            
    bool                      TexIsBuilt;                                     
    bool                      TexPixelsUseColors;                             
    ImVec2                    TexUvScale;                                     
    ImVec2                    TexUvWhitePixel;                                
    ImVector_ImFontPtr        Fonts;                                          
    ImVector_ImFontConfig     Sources;                                        
    ImVec4                    TexUvLines[IM_DRAWLIST_TEX_LINES_WIDTH_MAX+1];  
    int                       TexNextUniqueID;                                
    int                       FontNextUniqueID;                               
    ImVector_ImDrawListSharedDataPtr DrawListSharedDatas;                     
    ImFontAtlasBuilder*       Builder;                                        
    const ImFontLoader*       FontLoader;                                     
    const char*               FontLoaderName;                                 
    void*                     FontLoaderData;                                 
    unsigned int              FontLoaderFlags;                                
    int                       RefCount;                                       
    ImGuiContext*             OwnerContext;                                   
#ifndef IMGUI_DISABLE_OBSOLETE_FUNCTIONS
    ImFontAtlasRect           TempRect;                                       
#endif 
};
struct ImGuiViewport_t
{
    ImGuiID            ID;                 
    ImGuiViewportFlags Flags;              
    ImVec2             Pos;                
    ImVec2             Size;               
    ImVec2             FramebufferScale;   
    ImVec2             WorkPos;            
    ImVec2             WorkSize;           
    void*              PlatformHandle;     
    void*              PlatformHandleRaw;  
};