generated-out/docking/dear-imgui-raw-docking/cbits/DearImGuiWrappers.h

ImGuiID ImGui_DockSpace_wrap(ImGuiID dockspace_id, ImVec2 const* size, ImGuiDockNodeFlags flags, const ImGuiWindowClass* window_class);
void ImGui_Dummy_wrap(ImVec2 const* size);
void ImGui_PlotHistogramCallback_wrap(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset, const char* overlay_text, float scale_min, float scale_max, ImVec2 const* graph_size);
void ImGui_PlotLinesCallback_wrap(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset, const char* overlay_text, float scale_min, float scale_max, ImVec2 const* graph_size);