generated-out/docking/dear-imgui-raw-docking/src/DearImGui/Raw/ImGui.hsc


-- C: bool ImGui::ColorEdit3(const char* label, float[3] col, ImGuiColorEditFlags flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_ColorEdit3"
  imGui_ColorEdit3 :: CString -> (Ptr CFloat) -> ImGuiColorEditFlags -> IO CBool
-- C: bool ImGui::ColorEdit4(const char* label, float[4] col, ImGuiColorEditFlags flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_ColorEdit4"
  imGui_ColorEdit4 :: CString -> (Ptr CFloat) -> ImGuiColorEditFlags -> IO CBool
-- C: bool ImGui::ColorPicker3(const char* label, float[3] col, ImGuiColorEditFlags flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_ColorPicker3"
  imGui_ColorPicker3 :: CString -> (Ptr CFloat) -> ImGuiColorEditFlags -> IO CBool
-- C: bool ImGui::ColorPicker4(const char* label, float[4] col, ImGuiColorEditFlags flags, const float* ref_col)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_ColorPicker4"
  imGui_ColorPicker4 :: CString -> (Ptr CFloat) -> ImGuiColorEditFlags -> (Ptr CFloat) -> IO CBool
-- C: void ImGui::Columns(int count, const char* id, bool borders)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_Columns"
  imGui_Columns :: CInt -> CString -> CBool -> IO ()
-- C: bool ImGui::Combo(const char* label, int* current_item, const char* items_separated_by_zeros, int popup_max_height_in_items)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_Combo"
  imGui_Combo :: CString -> (Ptr CInt) -> CString -> CInt -> IO CBool
-- C: bool ImGui::Combo(const char* label, int* current_item, const char* (*getter)(void* user_data, int idx) getter, void* user_data, int items_count, int popup_max_height_in_items)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_ComboCallback"
  imGui_ComboCallback :: CString -> (Ptr CInt) -> (FunPtr ((Ptr ()) -> CInt -> IO CString)) -> (Ptr ()) -> CInt -> CInt -> IO CBool
-- C: bool ImGui::Combo(const char* label, int* current_item, const char*const[] items, int items_count, int popup_max_height_in_items)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_ComboChar"
  imGui_ComboChar :: CString -> (Ptr CInt) -> (Ptr CString) -> CInt -> CInt -> IO CBool
-- C: ImGuiContext* ImGui::CreateContext(ImFontAtlas* shared_font_atlas)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_CreateContext"
  imGui_CreateContext :: (Ptr ImFontAtlas) -> IO (Ptr ImGuiContext)
-- C: bool ImGui::DebugCheckVersionAndDataLayout(const char* version_str, size_t sz_io, size_t sz_style, size_t sz_vec2, size_t sz_vec4, size_t sz_drawvert, size_t sz_drawidx)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_DebugCheckVersionAndDataLayout"
  imGui_DebugCheckVersionAndDataLayout :: CString -> CSize -> CSize -> CSize -> CSize -> CSize -> CSize -> IO CBool
-- C: void ImGui::DebugFlashStyleColor(ImGuiCol idx)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_DebugFlashStyleColor"
  imGui_DebugFlashStyleColor :: ImGuiCol -> IO ()
-- C: void ImGui::DebugStartItemPicker()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_DebugStartItemPicker"
  imGui_DebugStartItemPicker :: IO ()
-- C: void ImGui::DebugTextEncoding(const char* text)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_DebugTextEncoding"
  imGui_DebugTextEncoding :: CString -> IO ()
-- C: void ImGui::DestroyContext(ImGuiContext* ctx)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_DestroyContext"
  imGui_DestroyContext :: (Ptr ImGuiContext) -> IO ()
-- C: void ImGui::DestroyPlatformWindows()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_DestroyPlatformWindows"
  imGui_DestroyPlatformWindows :: IO ()
foreign import capi unsafe "DearImGuiWrappers.h ImGui_DockSpace_wrap"
  c_imGui_DockSpace :: ImGuiID -> (Ptr ImVec2) -> ImGuiDockNodeFlags -> (Ptr ImGuiWindowClass) -> IO ImGuiID

imGui_DockSpace :: ImGuiID -> ImVec2 -> ImGuiDockNodeFlags -> (Ptr ImGuiWindowClass) -> IO ImGuiID
imGui_DockSpace dockspace_id size flags window_class =
  with size $ \_p1 -> c_imGui_DockSpace dockspace_id _p1 flags window_class

-- C: ImGuiID ImGui::DockSpaceOverViewport(ImGuiID dockspace_id, const ImGuiViewport* viewport, ImGuiDockNodeFlags flags, const ImGuiWindowClass* window_class)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_DockSpaceOverViewport"
  imGui_DockSpaceOverViewport :: ImGuiID -> (Ptr ImGuiViewport) -> ImGuiDockNodeFlags -> (Ptr ImGuiWindowClass) -> IO ImGuiID
-- C: bool ImGui::DragFloat(const char* label, float* v, float v_speed, float v_min, float v_max, const char* format, ImGuiSliderFlags flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_DragFloat"
  imGui_DragFloat :: CString -> (Ptr CFloat) -> CFloat -> CFloat -> CFloat -> CString -> ImGuiSliderFlags -> IO CBool
-- C: bool ImGui::DragFloat2(const char* label, float[2] v, float v_speed, float v_min, float v_max, const char* format, ImGuiSliderFlags flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_DragFloat2"
  imGui_DragFloat2 :: CString -> (Ptr CFloat) -> CFloat -> CFloat -> CFloat -> CString -> ImGuiSliderFlags -> IO CBool
-- C: bool ImGui::DragFloat3(const char* label, float[3] v, float v_speed, float v_min, float v_max, const char* format, ImGuiSliderFlags flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_DragFloat3"
  imGui_DragFloat3 :: CString -> (Ptr CFloat) -> CFloat -> CFloat -> CFloat -> CString -> ImGuiSliderFlags -> IO CBool
-- C: bool ImGui::DragFloat4(const char* label, float[4] v, float v_speed, float v_min, float v_max, const char* format, ImGuiSliderFlags flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_DragFloat4"
  imGui_DragFloat4 :: CString -> (Ptr CFloat) -> CFloat -> CFloat -> CFloat -> CString -> ImGuiSliderFlags -> IO CBool
-- C: bool ImGui::DragFloatRange2(const char* label, float* v_current_min, float* v_current_max, float v_speed, float v_min, float v_max, const char* format, const char* format_max, ImGuiSliderFlags flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_DragFloatRange2"
  imGui_DragFloatRange2 :: CString -> (Ptr CFloat) -> (Ptr CFloat) -> CFloat -> CFloat -> CFloat -> CString -> CString -> ImGuiSliderFlags -> IO CBool
-- C: bool ImGui::DragInt(const char* label, int* v, float v_speed, int v_min, int v_max, const char* format, ImGuiSliderFlags flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_DragInt"
  imGui_DragInt :: CString -> (Ptr CInt) -> CFloat -> CInt -> CInt -> CString -> ImGuiSliderFlags -> IO CBool
-- C: bool ImGui::DragInt2(const char* label, int[2] v, float v_speed, int v_min, int v_max, const char* format, ImGuiSliderFlags flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_DragInt2"
  imGui_DragInt2 :: CString -> (Ptr CInt) -> CFloat -> CInt -> CInt -> CString -> ImGuiSliderFlags -> IO CBool
-- C: bool ImGui::DragInt3(const char* label, int[3] v, float v_speed, int v_min, int v_max, const char* format, ImGuiSliderFlags flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_DragInt3"
  imGui_DragInt3 :: CString -> (Ptr CInt) -> CFloat -> CInt -> CInt -> CString -> ImGuiSliderFlags -> IO CBool
-- C: bool ImGui::DragInt4(const char* label, int[4] v, float v_speed, int v_min, int v_max, const char* format, ImGuiSliderFlags flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_DragInt4"
  imGui_DragInt4 :: CString -> (Ptr CInt) -> CFloat -> CInt -> CInt -> CString -> ImGuiSliderFlags -> IO CBool
-- C: bool ImGui::DragIntRange2(const char* label, int* v_current_min, int* v_current_max, float v_speed, int v_min, int v_max, const char* format, const char* format_max, ImGuiSliderFlags flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_DragIntRange2"
  imGui_DragIntRange2 :: CString -> (Ptr CInt) -> (Ptr CInt) -> CFloat -> CInt -> CInt -> CString -> CString -> ImGuiSliderFlags -> IO CBool
-- C: bool ImGui::DragScalar(const char* label, ImGuiDataType data_type, void* p_data, float v_speed, const void* p_min, const void* p_max, const char* format, ImGuiSliderFlags flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_DragScalar"
  imGui_DragScalar :: CString -> ImGuiDataType -> (Ptr ()) -> CFloat -> (Ptr ()) -> (Ptr ()) -> CString -> ImGuiSliderFlags -> IO CBool
-- C: bool ImGui::DragScalarN(const char* label, ImGuiDataType data_type, void* p_data, int components, float v_speed, const void* p_min, const void* p_max, const char* format, ImGuiSliderFlags flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_DragScalarN"
  imGui_DragScalarN :: CString -> ImGuiDataType -> (Ptr ()) -> CInt -> CFloat -> (Ptr ()) -> (Ptr ()) -> CString -> ImGuiSliderFlags -> IO CBool
foreign import capi unsafe "DearImGuiWrappers.h ImGui_Dummy_wrap"
  c_imGui_Dummy :: (Ptr ImVec2) -> IO ()

imGui_Dummy :: ImVec2 -> IO ()
imGui_Dummy size =
  with size $ \_p0 -> c_imGui_Dummy _p0
